TEST_PROGRAMS/INVALID/cecily_thomas/declaration_after_expression.min
# Invalid MiniLang program (declaration follows an expression)

var n: int;

read n;

var x: int;
